Fix client actions not showing on  loading screen

--- a/web/src/components/template/client/client-actions/ClientActions.scss
+++ b/web/src/components/template/client/client-actions/ClientActions.scss
@@ -1,6 +1,7 @@
 .actions {
   margin: 10px 10px;
   position: absolute;
+  z-index: 1000;
 
   button {
     background: #138cc8;
