--- a/web/src/components/template/client/loading-screen/LoadingScreen.scss
+++ b/web/src/components/template/client/loading-screen/LoadingScreen.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 900;
 }
 #loader {
   background:url(https://i.imgur.com/FPcMYQd.png)top center no-repeat;
